<resources>
    <string name="app_name">Ornet News</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="browse">Browse</string>
    <string name="share">Share</string>
    <string name="save">Read later</string>
    <string name="listen">Listen</string>
    <string name="internet_warming">Check your Internet Connection and Try Again!</string>
    <string name="news_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="enter_news_title">Enter News Title</string>
    <string name="enter_news_description">Enter News Description</string>
    <string name="select_news_category">Select News Category</string>
    <string name="select_news_region">Select News Region</string>
    <string name="select_news_status">Select News Status</string>
    <string name="select_news_language">Select News Language</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="enter_country_name">Enter country name</string>
    <string name="click_to_upload_news_banner">Click to upload News Banner</string>
    <string name="submit">Submit</string>

</resources>