<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="Add News"
            app:titleCentered="true"
            app:titleTextColor="?attr/colorOnPrimary">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/sv_addNews"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="10dp">
            <LinearLayout
                android:id="@+id/ll_addNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_news_title"
                    android:padding="5dp"
                    android:layout_marginVertical="8dp"
                    android:minHeight="48dp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_news_description"
                    android:padding="5dp"
                    android:layout_marginVertical="8dp"
                    android:minHeight="48dp"/>

                <Spinner
                    android:id="@+id/dropDownCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_news_category"
                    android:minHeight="48dp"
                    />

                <Spinner
                    android:id="@+id/dropDownRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_news_region"
                    android:minHeight="48dp"
                    />

                <Spinner
                    android:id="@+id/dropDownStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_news_status"
                    android:minHeight="48dp"
                    />

                <Spinner
                    android:id="@+id/dropDownLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_news_language"
                    android:minHeight="48dp"
                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_city_name"
                    android:padding="5dp"
                    android:layout_marginVertical="10dp"
                    android:textSize="18sp"
                    android:minHeight="48dp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_country_name"
                    android:padding="5dp"
                    android:layout_marginVertical="8dp"
                    android:minHeight="48dp"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_newsBanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginVertical="8dp"
                    android:visibility="gone">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_bannerImage"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:src="@mipmap/ic_launcher"
                        android:layout_gravity="center"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_imageBannerTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/click_to_upload_news_banner"
                        android:layout_gravity="center"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    app:cornerRadius="10dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:padding="16dp"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>